[Offline Pages] Add a timer to BackgroundLoaderOffliner to delay SavePage by 2 seconds.

BUG=695915

Review-Url: https://codereview.chromium.org/2714733003
Cr-Commit-Position: refs/heads/master@{#453381}

Former-commit-id: 632b3bc8fe84af8ed8f69adbfa181e025957bf6a